# linux_dlwin

./: .gitignore  CMakeLists.txt  Makefile  README.MD  TODO.MD
bindings/java/: build.gradle  settings.gradle
bindings/java/src/main/java/: module-info.java
bindings/java/src/main/java/net/gudenau/dlwin/: DlWin.java  DlWinFunction.java
bindings/java/src/main/java/net/gudenau/dlwin/impl/: DlWinImpl.java  Dragons.java  Natives.java  Test.java
include/: File.h  internalpe.h  pe.h  types.h  util.h
include/headers/: dos.h  pe.h
include/pe/: Exports.h  Segment.h
public/: dlwin.h  error.h  misc.h  pe.h  types.h
source/: File.cpp  dlwin.c  error.cpp  minimal.cpp  pe.c  pe.cpp  util.c  util.cpp
source/pe/: Exports.cpp  Segment.cpp
test/: Makefile
test/dll/: Makefile
test/dll/source/: test.c
test/include/: test.h
test/source/: main.c
